--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,20 +4,23 @@ on:
   push:
     branches: ["main"]
     paths-ignore:
-      - "docs/**"
       - "*.md"
   pull_request:
     paths-ignore:
-      - "docs/**"
       - "*.md"
 
 env:
-  MINECRAFT_VERSION: 1.20.1
-  JAVA_VERSION: 17                   
+  JAVA_VERSION: 17
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build / ${{matrix.minecraft_version}}-${{matrix.forge_version}}
+    strategy:
+      fail-fast: false
+      matrix:
+        minecraft_version: ["1.20.1", "1.20.4"]
+        forge_version: ["47.2.0"]
+    runs-on: ubuntu-latest      
     steps:
       - name: Check Environment Variables
         run: env
@@ -38,4 +41,10 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build
-        run: ./gradlew clean build
+        run: FORGE_VERSION="net.minecraftforge:forge:${{matrix.minecraft_version}}-${{matrix.forge_version}}" ./gradlew clean build
+
+      - name: Upload build artifact
+        uses: "actions/upload-artifact@v4"
+        with:
+          name: fate_tokens-${{matrix.minecraft_version}}-${{matrix.forge_version}}
+          path: "build/libs/*"
