--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,13 @@ env:
 
 jobs:
   build:
-    name: Build / ${{matrix.minecraft_version}}-${{matrix.forge_version}}
+    name: Minecraft ${{matrix.minecraft_version}} / Forge ${{matrix.forge_version}}
     strategy:
       fail-fast: false
       matrix:
-        minecraft_version: ["1.20.1", "1.20.4"]
-        forge_version: ["47.2.0"]
+        include:
+          - { minecraft_version: "1.20.1", forge_version: "47.2.0" }
+          - { minecraft_version: "1.20.4", forge_version: "49.0.38" }
     runs-on: ubuntu-latest      
     steps:
       - name: Check Environment Variables
